--- a/404.html
+++ b/404.html
@@ -3,23 +3,10 @@ permalink: /404.html
 layout: page
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div class="h-screen flex flex-col items-center justify-center">  
+  <h1 class="text-8xl font-bold font-display mb-4 is-animated">
+    {{ site.data.textblocks.error.headline }}
+  </h1>
+  {% include elements/section-subheadline.html text=site.data.textblocks.error.subheadline %}
+  {% include elements/button.html text=site.data.textblocks.error.button_text link=site.data.textblocks.error.button_link %}
 </div>
