--- a/404.html
+++ b/404.html
@@ -8,5 +8,5 @@ layout: page
     {{ site.data.textblocks.error.headline }}
   </h1>
   {% include elements/section-subheadline.html text=site.data.textblocks.error.subheadline %}
-  {% include elements/button.html text=site.data.textblocks.error.button_text link=site.data.textblocks.error.button_link %}
+  {% include elements/button.html icon=site.data.textblocks.error.button_icon text=site.data.textblocks.error.button_text link=site.data.textblocks.error.button_link %}
 </div>
